--- a/templates/login.html
+++ b/templates/login.html
@@ -67,7 +67,7 @@
                 <!-- Footer section with a more standard layout for sign-up and password links -->
                 <footer class="form-footer">
                     <p class="signup-prompt">
-                        Don't have an account? <a href="#">Sign Up</a>
+                        Don't have an account? <a href="{{ url_for('register_page') }}">Sign Up</a>
                     </p>
                     <a href="#" class="forgot-password-link">Forgot Password?</a>
                 </footer>
