--- a/templates/landing.html
+++ b/templates/landing.html
@@ -17,7 +17,7 @@
         <div class="logo"><a href="#home">Planora</a></div>
         <div class="nav-items">
             <div class="menu">
-                <a href="{{ url_for('home') }}">Home</a>
+                <a href="#home">Home</a>
                 <a href="#features">Features</a>
                 <a href="#pricing">Pricing</a>
                 <a href="#getstarted">Get Started</a>
@@ -241,6 +241,6 @@
         backSpeed: 50,
         backDelay: 1500,
         loop: true,
-        showCursor:false
+        showCursor: false
     });
 </script>
